ticTacToe.css
h1 {
  text-align: center;
  font-family: Lucida, monospace;
  color: #2B3856;
}

body {
  background-color: #BCC6CC;
}

.box {
  height: 100px;
  width: 100px;
  background-color: #566D7E;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  font-family: Lucida, monospace;
  margin: 2px;
}

.board {
  margin: auto;
  width: 325px;
  height: 325px;
}

.red {
  background-color: red;
}

.blue {
  background-color: blue;
}

footer {
  text-align: center;
}

button {
  font-size: 14;
  background-color: #2B3856;
  color: white;
  font-family: Lucida, monospace;
  border: none;
  padding: 10px 20px;
  text-align: center;
}

